
2007/12/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added GWEN_IDLIST64_ITERATOR which deprecates the following functions:
  - GWEN_IdList64_GetFirstId()
  - GWEN_IdList64_GetNextId()
  - GWEN_IdList64_GetFirstId2()
  - GWEN_IdList64_GetNextId2()


2007/12/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed another bug in GWEN_Buffer_ReplaceBytes()


===========================================================================
MARK: released gwenhywfar-3.0.1 (2007/12/07)
===========================================================================


2007/12/05: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in GWEN_Buffer_ReplaceBytes()


===========================================================================
MARK: released gwenhywfar-3.0.0 (2007/11/22)
===========================================================================


2007/11/19: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- GWEN_Gui_CGui is now less verbous in NonInteractive mode


2007-11-18  Christian Stimming  <stimming@tuhh.de>

	* m4/lib-prefix.m4 et al: Add additional aclocal macros that are
	needed by the iconv.m4 macro.


===========================================================================
MARK: released gwenhywfar-2.9.15rc6 (2007/11/17)
===========================================================================


2007/11/17: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- simplified default settings for local installation mode (and WIN32)


===========================================================================
MARK: released gwenhywfar-2.9.14rc5 (2007/11/16)
===========================================================================


2007/11/16: Martin Preuss<martin@libchipcard.de>
------------------------------------------------